src/App/Dashboard/styles/common-dashboard-styles.css
:root {
  --toggles-height: 2rem;
}

.small-toggle-button {
  height: var(--toggles-height) !important;
}

.small-toggle-label {
  font-size: 0.6rem;
}

