fixing button overflow

--- a/src/App/Dashboard/styles/common-dashboard-styles.css
+++ b/src/App/Dashboard/styles/common-dashboard-styles.css
@@ -7,5 +7,5 @@
 }
 
 .small-toggle-label {
-  font-size: 0.6rem;
+  font-size: 0.5rem;
 }
